# Singularity-works-

./: .gitignore  ALIEN_ASSAULT_WAVE2_NOTES.md  ALIEN_ASSAULT_WAVE3_NOTES.md  CURRENT_STATUS.md  README.md  forge_hud.html  forge_hud_server.py  install.ps1  install.sh  pyproject.toml  run_current_codebase.py
.claude/: CLAUDE_CODE_INTEGRATION_MAP.md  settings.json
archive/forge_initial_repo/: README.md  pyproject.toml
archive/forge_initial_repo/src/singularity_works/: __init__.py  cil_council.py  evidence_ledger.py  facts.py  forge_context.py  language_front_door.py  models.py  orchestration.py  pattern_ir.py  runtime.py  switchboard.py  transformer_registry.py
archive/forge_initial_repo/tests/: test_smoke.py
configs/: default.json  seed_genome.json
docs/: 01_LIVE_SHADOW_PROTOCOL.md  02_DESIGN_THREAD_STREAM_PROTOCOL.md  CURRENT_STATUS.md  LAW_OMEGA_NOTE.md  NOTES.md  full_thread_accessible_export_2026-04-02.md
examples/: demo_bad_run.py  demo_run.py  verify_build.py
forge_sandbox/: assurance.py  facts.py  genome_gates.py  intake.py  probe_loop.py  remediation.py  switchboard.py
methodology/: 00 SHALL_READ_BOOTSTRAP_INIT_PROTOCOL_FIRST.md  06A SHALL_RUN_FAILURE_RECOVERY_PROTOCOL_NEXT.md  08 SHALL_INIT_DOCTRINE_SNAPSHOT_NEXT.md  10A SHALL_INIT_LIVE_SHADOW_NEXT.md  10B SHALL_INIT_DESIGN_THREAD_STREAM_NEXT.md  12 SHALL_USE_ZERO_LOSS_EXTRACTION_WHEN_CORPUS_EXISTS.md  13 SHALL_DEFINE_EXPERIMENT_SPEC_WHEN_PRESSURE_IS_REQUIRED.md  15 SHALL_RECORD_MAINTENANCE_NOTE_WHEN_STATE_MUTATES.md  16 SHALL_REVIEW_PROMOTION_BEFORE_LOAD_BEARING_OR_CANON.md  17 SHALL_READ_ARCHIVE_INDEX_WHEN_PACKAGING_OR_REHYDRATING.md  92 CORPUS_CHAIN_LEDGER.csv  (+13 more)
(+204 files in other folders)
