[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-works"
version = "0.1.0"
description = "Initial Forge scaffold for a governed software production and audit platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
singularity-works = "singularity_works.runtime:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
